third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-stable/max-align.stderr
error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> tests/ui-stable/max-align.rs:96:17
   |
96 | #[repr(C, align(1073741824))]
   |                 ^^^^^^^^^^
